#74: Implementing tabs navigation in book page

--- a/jekyll/app/_layouts/default.html
+++ b/jekyll/app/_layouts/default.html
@@ -21,6 +21,9 @@
   <![endif]-->
   <!-- endbuild -->
 
+  <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+
 </head>
 <body class="{{ page.body_class }}">
 
