Displaying only books and people on term page

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -4,6 +4,7 @@
 @import 'book';
 @import 'books';
 @import 'homepage';
+@import 'list';
 @import 'search';
 
 * {
@@ -43,6 +44,10 @@ p {
 a, a:hover, a:visited {
   color: $lightBlue;
   text-decoration: none;
+}
+
+a:hover {
+  color: $lightBlue !important;
 }
 
 /* Reset bootstrap */
