Removing cities view altering

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -61,6 +61,10 @@ a, a:hover, a:visited {
 }
 /* End reset bootstrap */
 
+.krumo-root {
+  text-align: left;
+}
+
 .wrapper {
   max-width: 950px;
   margin: 17px auto 14px;
