--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -2,6 +2,7 @@
   <nav class="top-navigation nav-bar">
     <ul>
       <li class="first"><a href="#">Books</a></li>
+      <li><a href="#">Digital Books</a></li>
       <li><a href="#">People</a></li>
       <li><a href="#">Places</a></li>
       <li class="search last"><a href="#"></a></li>
