--- a/jekyll/app/_scss/_places.scss
+++ b/jekyll/app/_scss/_places.scss
@@ -1,7 +1,12 @@
 @media (min-width: 850px) {
   .page-places, .page-taxonomy-term {
-    .pane-cities-map-panel-pane-1, .pane-terms-list, .pane-term-nodes-list {
-      width: 50%;
+    .pane-terms-list, .pane-term-nodes-list {
+      width: 30%;
+      float: left;
+    }
+
+    .pane-cities-map-panel-pane-1 {
+      width: 70%;
       float: left;
     }
   }
