#179, #178: Imporving cities gelocations migration + Displaying maps

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -5,6 +5,7 @@
 @import 'books';
 @import 'homepage';
 @import 'list';
+@import 'places';
 @import 'search';
 
 * {
@@ -59,6 +60,10 @@ a, a:hover, a:visited {
   border-bottom: none;
 }
 /* End reset bootstrap */
+
+.krumo-root {
+  text-align: left;
+}
 
 .wrapper {
   max-width: 950px;
