--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -53,10 +53,14 @@ a, a:hover, a:visited {
   box-sizing: content-box;
 }
 
-.page-header{
+.page-header {
   padding: 0;
   margin: 0;
   border-bottom: none;
+}
+
+.nav>li>a:hover {
+  background-color: transparent;
 }
 /* End reset bootstrap */
 
@@ -93,6 +97,7 @@ a, a:hover, a:visited {
       color: $darkgray;
       display: inline-block;
       padding: 0;
+      white-space: nowrap;
 
       &:hover {
         color: $lightBlue;
