Fixing places list css

--- a/jekyll/app/_scss/_list.scss
+++ b/jekyll/app/_scss/_list.scss
@@ -10,6 +10,7 @@
       line-height: 2.41;
       letter-spacing: 1.2px;
       color: $darkgray;
+      display: inline-block;
 
       &:visited {
         color: $darkgray;
