--- a/jekyll/app/_scss/_places.scss
+++ b/jekyll/app/_scss/_places.scss
@@ -3,11 +3,19 @@
     .pane-terms-list, .pane-term-nodes-list {
       width: 30%;
       float: left;
+
+      .pane-content {
+        padding-right: 30px;
+      }
     }
 
     .pane-cities-map-panel-pane-1 {
       width: 70%;
       float: left;
     }
+  }
+
+  #ip-geoloc-map-of-view-cities_map-panel_pane_1 {
+    height: 600px !important;
   }
 }
