--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -229,6 +229,7 @@ a, a:hover, a:visited {
   footer {
     overflow: hidden;
     clear: both;
+    margin-top: 23px;
 
     .footer-nav-bar {
       padding-bottom: 35px;
