--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -30,7 +30,7 @@
         border-bottom: 1px solid $darkgray;
         margin-bottom: 32px;
 
-        h1 {
+        .title {
           font-size: 31px;
           font-weight: normal;
           line-height: 1.07;
