Fixing term pages css

--- a/jekyll/app/_scss/_places.scss
+++ b/jekyll/app/_scss/_places.scss
@@ -1,5 +1,6 @@
 @media (min-width: 850px) {
-  .page-places, .page-taxonomy-term {
+  .page-places {
+
     .pane-terms-list, .pane-term-nodes-list {
       width: 30%;
       float: left;
