--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -106,7 +106,7 @@ a, a:hover, a:visited {
       padding: 0;
       white-space: nowrap;
 
-      &:hover {
+      &:hover, &.active {
         color: $lightBlue;
       }
     }
