External book link design

--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -198,6 +198,10 @@
         display: none;
       }
 
+      .field-type-link-field a {
+        white-space: nowrap;
+      }
+
     }
 
     footer {
