--- a/jekyll/app/_scss/_books.scss
+++ b/jekyll/app/_scss/_books.scss
@@ -57,6 +57,10 @@
 
           a {
             color: $darkgray;
+
+            &:hover {
+              color: $lightBlue;
+            }
           }
         }
 
@@ -154,6 +158,10 @@
 
         a {
           color: $darkgray;
+
+          &:hover {
+            color: $lightBlue;
+          }
         }
       }
     }
