--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -155,12 +155,12 @@ a, a:hover, a:visited {
           a {
             width: 30px;
             height: 30px;
-            background: url('../images/top-search.png') no-repeat center bottom;
+            background: url('../images/top-search.png') no-repeat;
             display: inline-block;
             color: transparent;
 
             &.active, &:hover {
-              background-image: url('../images/top-search-active.png');
+              background-position: 0 -33px;
             }
           }
         }
