--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -123,7 +123,6 @@ a, a:hover, a:visited {
 
     .top-navigation {
       margin-bottom: 16px;
-      margin-right: 34px;
       font-family: bell_mtbold;
 
       li {
@@ -150,17 +149,17 @@ a, a:hover, a:visited {
 
         &.last {
           margin-left: 15px;
-          margin-top: 4px;
+          margin-top: 7px;
 
           a {
-            width: 30px;
-            height: 30px;
-            background: url('../images/top-search.png') no-repeat center bottom;
+            width: 25px;
+            height: 27px;
+            background: url('../images/top-search.png') no-repeat;
             display: inline-block;
             color: transparent;
 
             &.active, &:hover {
-              background-image: url('../images/top-search-active.png');
+              background-position: 0 -33px;
             }
           }
         }
