Fixing label position

--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -57,6 +57,7 @@
         .field-label {
           display: inline-block;
           font-weight: normal;
+          vertical-align: top;
 
           &.type-label {
             font-size: 16px;
