Fixing translation migration, and displaying translations as nodes

--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -187,6 +187,10 @@
 
             .fields-multi:not(:first-child) {
               margin-top: 30px;
+
+              .node-teaser:not(:first-child) {
+                margin-top: 30px;
+              }
             }
           }
         }
