--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -192,6 +192,10 @@
                 margin-top: 30px;
               }
             }
+
+            .field-name-field-target-general-notes .field-label {
+              display: none;
+            }
           }
         }
       }
