Updating cities map

--- a/jekyll/app/_scss/_places.scss
+++ b/jekyll/app/_scss/_places.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  #ip-geoloc-map-of-view-cities_map-panel_pane_1 {
+  #ip-geoloc-map-of-view-cities_map-panel_pane_1, #ip-geoloc-map-of-view-city_books-panel_pane_map {
     height: 600px !important;
   }
 }
